# PicIO

./: README.md  app.py  pyproject.toml  requirements.txt
data/: Car.docx  DS1.docx  Testing.pptx  sample.xlsx
helpers/: helper.py
image_extractors/: doc_.py  excel_.py  pdf_.py  ppt_.py
models/: llm.py
utils/: utils.py
