[tool.poetry]
name = "picio"
version = "0.1.0"
description = ""
authors = ["Saran-Kaanth <sarnknth16@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
spire-pdf = "^10.12.1"
groq = "^0.22.0"
ipykernel = "^6.29.5"
pymupdf = "^1.25.5"
streamlit = "^1.44.1"
python-dotenv = "^1.1.0"
python-docx = "^1.1.2"
spire-doc = "^13.3.8"
openpyxl = "^3.1.5"
pillow = "^11.1.0"
python-pptx = "^1.0.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
